CHANGELOG RoundCube Webmail
---------------------------

2008/09/04 (thomasb)
----------
- Enable export of address book contacts as vCard

2008/09/04 (alec)
----------
- Truncate very long (above 50 characters) attachment filenames when displaying
- Support \" and \\ in quoted strings when parsing BODYSTRUCTURE (mime.inc)
- Allow 'readonly' atributes in input and textarea (#1485312)

2008/09/03 (thomasb)
----------
- Allow to auto-detect client language if none set (#1484434)
- Auto-detect the client timezone (user configurable)

2008/09/03 (alec)
----------
- Add RFC2231 header value continuations support for attachment
  filenames + hack for servers that not support that feature
- Fix Reply-To header displaying (#1485314)

2008/09/02 (thomasb)
----------
- Add feature to import contacts from vcard files (#1326103)
- Mark form buttons that provide the most obvious operation (mainaction)

2008/08/30 (alec)
----------
- Improved HTML to TXT conversion by html2text class update
  to version 1.0.0

2008/08/28 (alec)
----------
- Added option 'quota_zero_as_unlimited' (#1484604)
- Added PRE handling in html2text class (#1484740)

2008/08/28 (robin)
----------
- Added folder hierarchy collapsing

2008/08/27 (alec)
----------
- Added options to use syslog instead of log file (#1484850)
- Added Logging & Debugging section in Installer
- Write to smtp log also sent MDN confirmations

2008/08/26 (alec)
----------
- Removed support for PEAR::DB driver

2008/08/21 (alec)
----------
- Add Content-Length header while attachments downloading (#1484256)
- Fix In-Reply-To and References headers when composing saved draft 
  message (#1485288)
- Removed PHP4 class constructors
- Fix html message charset conversion for charsets with underline (#1485287) 
- Fix buttons status after contacts deletion (#1485233)

2008/08/21 (estadtherr)
----------
- Fix escaping of To: and From: fields when building message body for reply
  or forward in the HTML editor (#1484904)
